test/files/neg/trait-defaults-super.check
trait-defaults-super.scala:14: error: Unable to implement a super accessor required by trait T unless Iterable[String] is directly extended by class C.
class C extends T
      ^
1 error
